fix: correct Bootstrap 5 spacing classes for mobile nav alignment

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -30,10 +30,23 @@
     background-color: $secondary-blue;
     color: $white;
   }
+
+  @media (max-width: 991px) {
+    margin-left: 0;
+    margin-top: 0.5rem;
+    display: block;
+    width: fit-content;
+  }
 }
 
 .user-name {
   color: $secondary-blue;
   font-size: 0.9rem;
   margin-right: 0.5rem;
+
+  @media (max-width: 991px) {
+    display: block;
+    margin-top: 0.5rem;
+    margin-right: 0;
+  }
 }
